@@ -99,17 +99,6 @@ namespace MonoDevelop.Ide.Gui
 				version += "." + Assembly.GetEntryAssembly ().GetName ().Version.Build;
 			if (Assembly.GetEntryAssembly ().GetName ().Version.Revision != 0)
 				version += "." + Assembly.GetEntryAssembly ().GetName ().Version.Revision;
-
-			try {
-				// When we loose Gnome.Program what should we do here?
-			} catch (Exception ex) {
-				string msg = GettextCatalog.GetString ("MonoDevelop failed to start.\nIf you installed MonoDevelop using a binary installer, take a look at \nhttp://www.mono-project.com/InstallerInstructions for more info about possible\ncauses of this error.");
-				Console.WriteLine (new string ('#',70));
-				Console.WriteLine (msg);
-				Console.WriteLine (new string ('#',70));
-				Console.WriteLine (ex);
-				return 1;
-			}
 			
 			// System checks
 			if (!CheckBug77135 ())
