@@ -1,3 +1,7 @@
+2008-01-16  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Ide.Gui/IdeStartup.cs: Remove dead code.
+
 2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Ide.Templates/FileTemplate.cs,
